tests/instantiating/access_invalid_type/stderr.golden
error: access property must be of type string, current type float
bus.fbd +3:12
   |
 3 | 		access = 3.14
   | 		         ^^^^
